--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
