--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@types/react-icons": "^2.2.7",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "immer": "^10.1.1",
     "react": "^18.3.1",
